# ir-spanish

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_env.sh  titulacion.md
analysis/: distributions.ipynb  explore_data.ipynb
baselines/: bge_m3.py  bm25.py  e5_large.py  harrier.py  jina_v5_small.py  qwen.py  splade_v3.py
baselines/utils/: __init__.py  cache.py  data.py  encoding.py  model.py  observability.py  retrieval.py  workflow.py
notes/: cmds.sh  results.md  titulacion.md
rerankers/: bge_reranker_v2_m3.py  fuse.py  hybrid.py  jina_colbert_v2.py  jina_reranker_v3.py
utils/: cache.py  data.py  encoding.py  model.py  retrieval.py  workflow.py
