[project]
name = "proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserini>=1.5.0",
    "ranx>=0.3.21",
    "sentence-transformers>=5.3.0",
    "fastparquet<2026",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
