[project]
name = "proyecto"
version = "0.1.0"
description = "Evaluating rank fusion for Information Retrieval in Spanish"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserini>=1.5.0",
    "ranx>=0.3.21",
    "sentence-transformers>=5.3.0",
    "fastparquet<2026",
    "accelerate>=1.13.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
